<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/logo2"
    tools:context="com.example.emene.infolabsys.View.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:orientation="horizontal"
        android:background="@color/colorPrimaryDark"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/id_pac"
            android:textColor="#000000"
            android:theme="@style/Stilo1" />
        <EditText
            android:id="@+id/edi_pac"
            android:hint="@string/id_hint" android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/corfundo"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="372dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal"
            android:theme="@style/Stilo1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left"
                android:text="@string/id_exa"
                android:textColor="#000000"
                android:theme="@style/Stilo1" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_sair"
            android:text="@string/btn_sair"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"


            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:text="Editar"
            android:layout_marginLeft="10dp"/>


    </LinearLayout>
</LinearLayout>
