<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/logo2">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="Paciente:"
        android:gravity="center"
        style="@style/Stilo2"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/Stilo2"
        android:id="@+id/nome_pac">


    </Spinner>

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <CheckBox
                android:id="@+id/id_usa"
                android:layout_column="0"
                android:layout_row="0"
                android:background="@color/corfundo"
                />

            <TextView
                android:id="@+id/codexa"
                android:layout_column="1"
                android:layout_row="0"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@color/corfundo"
                android:text="exame"/>

        </GridLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <Button
            android:id="@+id/btn_sair"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="20dp"
            android:text="@string/btn_sair"
            android:theme="@style/Stilo3"
            android:clickable="false"/>

        <Button
            android:id="@+id/btn_limpar"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="0dp"
            android:theme="@style/Stilo3"
            android:text="@string/btn_limp"
            android:clickable="false"
            />

        <Button
            android:id="@+id/btn_salvar"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="0dp"
            android:theme="@style/Stilo3"
            android:text="@string/btn_salvar"
            android:clickable="false"
            />

        <Button
            android:id="@+id/btn_novo"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="0dp"
            android:theme="@style/Stilo3"
            android:text="@string/btn_novo"
            />

    </LinearLayout>

</LinearLayout>