<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/logo2"
    tools:context="com.example.emene.infolabsys.View.Ed_Parasitologico">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/idpac"
            android:theme="@style/Stilo5"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@color/colorPrimaryDark">


        <TextView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@color/colorPrimary"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:theme="@style/Stilo5"
            android:text="OVOS"/>

        <EditText
            android:layout_width="240dp"
            android:layout_height="50dp"
            android:layout_marginTop="39dp"
            android:background="@color/corfundo"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@color/colorPrimary"
            android:layout_marginTop="130dp"
            android:layout_marginLeft="-340dp"
            android:theme="@style/Stilo5"
            android:text="CISTOS"/>

        <EditText
            android:layout_width="240dp"
            android:layout_height="50dp"
            android:layout_marginTop="129dp"
            android:background="@color/corfundo"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@color/colorPrimary"
            android:layout_marginTop="220dp"
            android:layout_marginLeft="-340dp"
            android:theme="@style/Stilo5"
            android:text="LARVAS"/>

        <EditText
            android:layout_width="240dp"
            android:layout_height="50dp"
            android:layout_marginTop="219dp"
            android:background="@color/corfundo"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@color/colorPrimary"
            android:layout_marginTop="310dp"
            android:layout_marginLeft="-340dp"
            android:theme="@style/Stilo5"
            android:text="TROFOZO"/>

        <EditText
            android:layout_width="240dp"
            android:layout_height="50dp"
            android:layout_marginTop="309dp"
            android:background="@color/corfundo"/>





    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="0dp"
            android:theme="@style/Stilo3"
            android:text="@string/btn_sair"
            />

        <Button
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="0dp"
            android:theme="@style/Stilo3"
            android:text="@string/btn_salvar"
            />

    </LinearLayout>



</LinearLayout>
