<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/logo2"
    tools:context="com.example.emene.infolabsys.View.Paciente">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:weightSum="1">

        <TextView
            android:gravity="center"
            android:layout_width="75dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:text="NOME:"
            android:theme="@style/Stilo2"/>

        <EditText
            android:id="@+id/pc_nome"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="19dp"
            android:background="@color/corfundo"
            />

        <TextView
            android:gravity="center"
            android:layout_width="75dp"
            android:layout_height="30dp"
            android:layout_marginTop="70dp"
            android:layout_marginLeft="-285dp"
            android:text="RG:"
            android:theme="@style/Stilo2"/>

        <EditText
            android:id="@+id/pc_rg"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="69dp"
            android:inputType="number"
            android:background="@color/corfundo"/>

        <TextView
            android:gravity="center"
            android:layout_width="75dp"
            android:layout_height="30dp"
            android:layout_marginTop="120dp"
            android:layout_marginLeft="-285dp"
            android:text="SUS:"
            android:theme="@style/Stilo2" />

        <EditText
            android:id="@+id/pc_sus"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="119dp"
            android:inputType="number"
            android:background="@color/corfundo"/>

        <TextView
            android:gravity="center"
            android:layout_width="75dp"
            android:layout_height="30dp"
            android:layout_marginTop="170dp"
            android:layout_marginLeft="-285dp"
            android:text="DN:"
            android:theme="@style/Stilo2" />

        <EditText
            android:id="@+id/pc_data"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="169dp"
            android:inputType="date"
            android:background="@color/corfundo"/>

        <TextView
            android:gravity="center"
            android:layout_width="75dp"
            android:layout_height="30dp"
            android:layout_marginTop="220dp"
            android:layout_marginLeft="-235dp"
            android:text="SEXO:"
            android:theme="@style/Stilo2" />

        <Spinner
            android:id="@+id/sp_sex"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:entries="@array/sexo"
            android:background="@color/corfundo"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="219dp"
            ></Spinner>


   </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <Button
            android:id="@+id/btn_sair"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="20dp"
            android:text="@string/btn_sair"
            android:theme="@style/Stilo3"/>

        <Button
            android:id="@+id/btn_limpar"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="100dp"
            android:theme="@style/Stilo3"
            android:text="@string/btn_limp"
            />

        <Button
            android:id="@+id/btn_salvar"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="100dp"
            android:theme="@style/Stilo3"
            android:text="@string/btn_salvar"
            />

    </LinearLayout>


</LinearLayout>
