<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/logo2"
    tools:context="com.example.emene.infolabsys.View.EdHemograma">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        >

        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/idpac"
            android:theme="@style/Stilo5"/>


    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="350dp"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:background="@color/colorPrimary"
        android:theme="@style/Stilo5"
        android:text="HEM"/>

    <EditText
        android:id="@+id/edit_hem"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="09dp"
        android:inputType="number"
        android:background="@color/corfundo"/>

    <TextView
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:background="@color/colorPrimary"
        android:theme="@style/Stilo5"
        android:text="LEU"/>

    <EditText
        android:id="@+id/edit_leu"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="09dp"
        android:background="@color/corfundo"/>

    <TextView
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="-310dp"
        android:background="@color/colorPrimary"
        android:theme="@style/Stilo5"
        android:text="HB"/>

    <EditText
        android:id="@+id/edit_hb"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="59dp"
        android:background="@color/corfundo"/>

    <TextView
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="10dp"
        android:background="@color/colorPrimary"
        android:theme="@style/Stilo5"
        android:text="SEG"/>

    <EditText
        android:id="@+id/edit_seg"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="59dp"
        android:background="@color/corfundo"/>

    <TextView
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="110dp"
        android:layout_marginLeft="-310dp"
        android:background="@color/colorPrimary"
        android:theme="@style/Stilo5"
        android:text="HT"/>

    <EditText
        android:id="@+id/edit_ht"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="109dp"
        android:background="@color/corfundo"/>

    <TextView
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="110dp"
        android:layout_marginLeft="10dp"
        android:background="@color/colorPrimary"
        android:theme="@style/Stilo5"
        android:text="LIN"/>

    <EditText
        android:id="@+id/edit_lin"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="109dp"
        android:background="@color/corfundo"/>

    <TextView
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="160dp"
        android:layout_marginLeft="-310dp"
        android:background="@color/colorPrimary"
        android:theme="@style/Stilo5"
        android:text="VCM"/>

    <EditText
        android:id="@+id/edit_vcm"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="159dp"
        android:background="@color/corfundo"/>

    <TextView
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="160dp"
        android:layout_marginLeft="10dp"
        android:background="@color/colorPrimary"
        android:theme="@style/Stilo5"
        android:text="MON"/>

    <EditText
        android:id="@+id/edit_mon"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="159dp"
        android:background="@color/corfundo"/>

    <TextView
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="210dp"
        android:layout_marginLeft="-310dp"
        android:background="@color/colorPrimary"
        android:theme="@style/Stilo5"
        android:text="HCM"/>

    <EditText
        android:id="@+id/edit_hcm"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="209dp"
        android:background="@color/corfundo"/>

    <TextView
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="210dp"
        android:layout_marginLeft="10dp"
        android:background="@color/colorPrimary"
        android:theme="@style/Stilo5"
        android:text="EOS"/>

    <EditText
        android:id="@+id/edit_eos"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="209dp"
        android:background="@color/corfundo"/>

    <TextView
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="260dp"
        android:layout_marginLeft="-310dp"
        android:background="@color/colorPrimary"
        android:theme="@style/Stilo5"
        android:text="CHCM"/>

    <EditText
        android:id="@+id/edi_chcm"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="259dp"
        android:background="@color/corfundo"/>

    <TextView
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="260dp"
        android:layout_marginLeft="10dp"
        android:background="@color/colorPrimary"
        android:theme="@style/Stilo5"
        android:text="BAS"/>

    <EditText
        android:id="@+id/edit_bas"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="259dp"
        android:background="@color/corfundo"/>

    <TextView
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="310dp"
        android:layout_marginLeft="-310dp"
        android:background="@color/colorPrimary"
        android:theme="@style/Stilo5"
        android:text="RDW"/>

    <EditText
        android:id="@+id/edit_rdw"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="309dp"
        android:background="@color/corfundo"/>

    <TextView
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="310dp"
        android:layout_marginLeft="10dp"
        android:background="@color/colorPrimary"
        android:theme="@style/Stilo5"
        android:text="PLA"/>

    <EditText
        android:id="@+id/edit_pla"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="309dp"
        android:background="@color/corfundo"/>

    <EditText
        android:id="@+id/edit_obs"
        android:layout_width="360dp"
        android:layout_height="55dp"
        android:layout_marginTop="370dp"
        android:layout_marginLeft="-350dp"
        android:background="@color/corfundo"/>

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <Button
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="0dp"
            android:theme="@style/Stilo3"
            android:text="@string/btn_sair"
            />

        <Button
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="0dp"
            android:theme="@style/Stilo3"
            android:text="@string/btn_salvar"
            />


    </LinearLayout>



</LinearLayout>
